# graphstudy

./: .gitignore  CMakeLists.txt  README.md
include/: graph.h  trace.h
src/: graph.cpp  trace.cpp
test/: CMakeLists.txt  testGraph.cpp
